examples/errors/insufbanks.sea
/////////////////////////////////////////////
// insufficient banks
// - This application uses one banked array as input,
// one banked array as output, regular banking with each
// unroll access overlapping with another access . 
////////////////////////////////////////////

func madd(a: float[1024 bank(16)], c: float[1024 bank(16)]) {

  for (let i = 0..1023) unroll 32 {
    c[i] := a[i];
  }

}
